# tally

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  analyzer_llm.py  debug_sec_analyzer.py  debug_sec_analyzer_service.py  debug_sec_analyzer_simple.py  debug_sec_endpoint.py  debug_sec_filings.py  explanations.md  mypy.ini  noxfile.py  orchestrator.py  planner_llm.py  pyproject.toml  real_world_sec_analysis.py  requirements-dev.txt  requirements.in  requirements.ini  requirements.txt  sec_analysis_response_AAPL_analyze.json  sec_analysis_response_GS_analyze.json  simple_sec_analysis.py  test_document.txt  test_error_messages.py  test_get_financial_metric.py  test_get_sec_filing.py  test_planner.py  test_polygon_financial_metrics.py  test_sec_analyzer_direct.py  test_tool_planner.py  tox.ini
XBRL parser/: README.md  cleaned_output.html  example_markdown_renderer.py  example_usage.py  explanations.md  extracted_facts.json  ixbrl_preprocessor.py  markdown_renderer.py  output.md  requirements.txt  run_xbrl_pipeline.py  sample_ixbrl.html  test_complete_pipeline.py  test_diagnostics_markdown.py  test_diagnostics_preprocessor.py  test_diagnostics_xbrl_facts.py  test_markdown_renderer.py  test_visual_block_detailed.py  test_visual_block_extractor.py  test_xbrl_fact_extractor.py  visual_block_extractor.py  visual_blocks.json  xbrl_fact_extractor.py
ai_analyst/: README.md  explanations.md
ai_analyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
analysis_results/: AAPL_10K_2023_analysis.json  AAPL_FilingType.FORM_10K_2023-10-27_parsed.json  AAPL_FilingType.FORM_10K_2023-10-27_raw.txt  (+4 more)
app/: main.py
tally/: .cookiecutter.json  CODE_OF_CONDUCT.md  noxfile.py  pyproject.toml
tally/cache/: AAPL.json
tally/docs/: conf.py  usage.md
tally/src/: run.py
tally/src/infra/acquisition/: interfaces.py  models.py  sec_fetcher.py
tally/src/infra/agents/: data_index_agent.py  langgraph.py  math_agent.py  models.py
tally/src/infra/collections/: models.py  registry.py
tally/src/infra/config/: rate_limiter.py  settings.py
tally/src/infra/databases/: __init__.py  cache.py  engine.py
tally/src/infra/embeddings/: __init__.py  models.py  providers.py
tally/src/infra/ingestion/: models.py  sec_pdf_loader.py  web_loader.py
tally/src/infra/langsmith/: config.py  example.py  logging.py
tally/src/infra/llm/: __init__.py  models.py  providers.py
tally/src/infra/pipelines/: indexing_pipeline.py  mem_walker.py
tally/src/infra/preprocessing/: html_parser.py  markdown_splitter.py  models.py  pdf_parser.py  sec_parser.py
tally/src/infra/ratelimit/: exceptions.py  limiter.py  models.py  token_bucket.py
tally/src/infra/ratelimit/algorithms/: leaky_bucket.py  models.py  token_bucket.py
tally/src/infra/tools/: calculator.py  collection_router.py  models.py  pipelines.py  summarizer.py  table_summarizer.py  vector_search.py
tally/src/infra/vector_stores/: chromadb.py  models.py  weaviate.py
tally/src/tally/: __main__.py
tally/tests/: __init__.py  test_main.py
tally/tests/integration/infra/tools/: test_collection_router_integration.py
tally/tests/unit/infra/: conftest.py
tally/tests/unit/infra/acquisition/: test_sec_fetcher.py  test_sec_filing_request.py
tally/tests/unit/infra/embeddings/: test_embedding_providers.py  test_providers.py
tally/tests/unit/infra/ingestion/: test_sec_pdf_loader.py  test_web_loader.py
tally/tests/unit/infra/llm/: test_providers.py
tally/tests/unit/infra/pipelines/: test_mem_walker.py
tally/tests/unit/infra/ratelimit/: test_limiter.py
tally/tests/unit/infra/ratelimit/algorithms/: test_leaky_bucket.py
(+294 files in other folders)
