[tool.poetry]
name = "tally"
version = "0.0.0"
description = "Tally"
authors = ["Neel Patel <patelneel55@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/patelneel55/tally"
repository = "https://github.com/patelneel55/tally"
documentation = "https://tally.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]
packages = [
    { include = "infra", from = "src" },      # For your src/infra code
    # { include = "tally", from = "src" },      # For your src/tally code (related to the script)
    # When you add your web_server, add it here too:
    # { include = "web_server", from = "src" },
]

[tool.poetry.urls]
Changelog = "https://github.com/patelneel55/tally/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.1"
sqlalchemy = "^2.0.40"
schema = "^0.7.7"
pydantic = "^2.11.3"
aiohttp = "^3.11.18"
pydantic-settings = "^2.6.0"
parse = "^1.20.2"
crawlee = "^0.6.8"
colorama = "^0.4.6"
playwright = "^1.51.0"
langchain = "^0.3.24"
langchain-core = "^0.3.56"
langchain-community = "0.3.21"
pymupdf4llm = "^0.0.21"
sec-parser = "^0.58.1"
langgraph = "^0.3.34"
numexpr = "^2.10.2"
langchain-openai = "^0.3.14"
langsmith = "^0.1.0"
weaviate = "^0.1.2"
psycopg2-binary = "^2.9.10"
weaviate-client = "^4.14.1"
langchain-weaviate = "0.0.4"
aiolimiter = "^1.2.1"
tiktoken = "^0.9.0"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
pytest-asyncio = "^0.26.0"

[tool.poetry.scripts]
tally = "tally.__main__:main"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tally", "infra", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "example_*.py"]
addopts = "-ra -q"
pythonpath = ["src"]
